tests/ui/sanitize-attr/valid-sanitize.stderr
error: `#[sanitize(thread = ...)]` attribute cannot be used on statics
  --> $DIR/valid-sanitize.rs:15:1
   |
LL | #[sanitize(thread = "off")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be used on statics if only the address is sanitized

error: `#[sanitize]` attribute cannot be used on type aliases
  --> $DIR/valid-sanitize.rs:18:1
   |
LL | #[sanitize(address = "off")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on traits
  --> $DIR/valid-sanitize.rs:21:1
   |
LL | #[sanitize(address = "off")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on associated consts
  --> $DIR/valid-sanitize.rs:23:5
   |
LL |     #[sanitize(address = "off")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on associated types
  --> $DIR/valid-sanitize.rs:26:5
   |
LL |     #[sanitize(address = "off")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on required trait methods
  --> $DIR/valid-sanitize.rs:29:5
   |
LL |     #[sanitize(address = "off")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to closures, crates, functions, impl blocks, inherent methods, modules, provided trait methods, statics, and trait methods in impl blocks

error: `#[sanitize]` attribute cannot be used on required trait methods
  --> $DIR/valid-sanitize.rs:35:5
   |
LL |     #[sanitize(address = "off")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to closures, crates, functions, impl blocks, inherent methods, modules, provided trait methods, statics, and trait methods in impl blocks

error: `#[sanitize]` attribute cannot be used on associated types
  --> $DIR/valid-sanitize.rs:43:5
   |
LL |     #[sanitize(address = "off")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on associated types
  --> $DIR/valid-sanitize.rs:60:5
   |
LL |     #[sanitize(address = "off")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on structs
  --> $DIR/valid-sanitize.rs:65:1
   |
LL | #[sanitize(address = "off")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on struct fields
  --> $DIR/valid-sanitize.rs:67:5
   |
LL |     #[sanitize(address = "off")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on foreign statics
  --> $DIR/valid-sanitize.rs:80:5
   |
LL |     #[sanitize(address = "off", thread = "on")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on foreign types
  --> $DIR/valid-sanitize.rs:83:5
   |
LL |     #[sanitize(address = "off", thread = "on")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on foreign functions
  --> $DIR/valid-sanitize.rs:86:5
   |
LL |     #[sanitize(address = "off", thread = "on")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to closures, crates, functions, impl blocks, methods, modules, and statics

error: `#[sanitize]` attribute cannot be used on statements
  --> $DIR/valid-sanitize.rs:92:5
   |
LL |     #[sanitize(address = "off", thread = "on")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on statements
  --> $DIR/valid-sanitize.rs:98:5
   |
LL |     #[sanitize(address = "off")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on match arms
  --> $DIR/valid-sanitize.rs:109:9
   |
LL |         #[sanitize(address = "off")]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: `#[sanitize]` attribute cannot be used on expressions
  --> $DIR/valid-sanitize.rs:113:5
   |
LL |     #[sanitize(address = "off")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[sanitize]` can be applied to crates, functions, impl blocks, modules, and statics

error: aborting due to 18 previous errors

